adding everyone else to the team section on homepage

--- a/index.html
+++ b/index.html
@@ -232,6 +232,78 @@
               Project Manager</h3></h3>
               </div></a>
             </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <a href="/profile/austin_bowers.html"><div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>AUSTIN BOWERS</strong><br>
+                <br>
+              IT Manager</h3></h3>
+              </div></a>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <a href="/profile/deonte_randolph.html"><div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>DEONTE RANDOLPH</strong><br>
+                <br>
+              Project Coordinator</h3></h3>
+              </div></a>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <a href="/profile/ellen_tackett.html"><div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>ELLEN TACKETT</strong><br>
+                <br>
+              Executive Assistant</h3></h3>
+              </div></a>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <a href="/profile/gene_apostol.html"><div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>GENE APOSTOL</strong><br>
+                <br>
+              Controller</h3></h3>
+              </div></a>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <a href="/profile/moana_cummings.html"><div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>MOANA CUMMINGS</strong><br>
+                <br>
+              Administrative Manager</h3></h3>
+              </div></a>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <a href="/profile/norah_willett.html"><div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>NORAH WILLETT</strong><br>
+                <br>
+              Accounting Specialist</h3></h3>
+              </div></a>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <a href="/profile/tiffany_gould.html"><div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>TIFFANY GOULD</strong><br>
+                <br>
+              Reception</h3></h3>
+              </div></a>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <a href="/profile/peter_aiello.html"><div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>PETER AIELLO</strong><br>
+                <br>
+              Architect/Manager</h3></h3>
+              </div></a>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <a href="/profile/aimee_st_cyr.html"><div class="team-member">
+                <img alt="" src="assets/img/portrait_placeholder.png">
+                <h3><strong>AIMEE ST. CYR</strong><br>
+                <br>
+              Architect</h3></h3>
+              </div></a>
+            </div>
         </div>
       <!-- /// -->
       </div>
