--- a/history.html
+++ b/history.html
@@ -48,7 +48,7 @@ if (supportsImports()) {
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
           <li>
-            <a href="/home">HOME</a>
+            <a href="/#home">HOME</a>
           </li>
           <li>
             <a href="/#about">ABOUT</a>
