--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
           </div>
         </div>
         <div class="col-md-7">
-          <h2>Complete the form to request a consultation with a Vidaris expert.<br>
+          <h2>Complete the form to request a consultation with one of our experts.<br>
           <br></h2>
           <form>
             <div class="row">
