--- a/index.html
+++ b/index.html
@@ -401,14 +401,14 @@
       Honolulu, HI 96813<br>
       Phone: 808.535.3144
     </div>
-  </div>
-  <div class="for-full-back" id="footer">
-    <div class="for-full-back footer-copyright">
+    <div style="clear:both"></div>
+    <div class="footer-copyright">
       © 
       <script type="text/javascript">
          document.write(new Date().getFullYear());
       </script> www.trinityerd.com | All Right Reserved
     </div>
+        <div style="clear:both"></div>
   </div><!--End Footer Section -->
   <!-- JAVASCRIPT FILES PLACED AT THE BOTTOM TO REDUCE THE LOADING TIME  -->
   <!-- CORE JQUERY  -->
