--- a/index.html
+++ b/index.html
@@ -28,10 +28,49 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js">
-  </script>
+  <!--<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" rel="stylesheet">
   <script type="text/javascript">
    $(document).ready(function() {
+      function getQueryVariable(variable) {
+        var query = window.location.search.substring(1);
+        var vars = query.split('&');
+        for (var i = 0; i < vars.length; i++) {
+          var pair = vars[i].split('=');
+          if (decodeURIComponent(pair[0]) == variable) {
+              return decodeURIComponent(pair[1]);
+          }
+        }
+        console.log('Query variable %s not found', variable);
+      }      
+      if (getQueryVariable('thanks') == '1'){ 
+        $('html, body').animate({
+            scrollTop: $("#contact").offset().top
+        }, 2000);
+
+        toastr.options = {
+          "closeButton": false,
+          "debug": false,
+          "newestOnTop": false,
+          "progressBar": true,
+          "positionClass": "toast-top-right",
+          "preventDuplicates": false,
+          "onclick": null,
+          "showDuration": "12800",
+          "hideDuration": "1000",
+          "timeOut": "15000",
+          "extendedTimeOut": "1000",
+          "showEasing": "swing",
+          "hideEasing": "linear",
+          "showMethod": "fadeIn",
+          "hideMethod": "fadeOut"
+        }
+        toastr.options.closeHtml = '<button><i class="icon-off"></i></button>';
+        toastr.success('Thanks for getting in touch, we will get back to you soon!', '<span style="font-size:18px; font-weight:bold;">Success!</span>')
+      }
+
      $("#seemorestaff").click(function() {
          $("#slidemore").slideToggle(999);
      });
@@ -340,7 +379,7 @@
       <div class="row text-center">
         <div class="col-md-8 col-md-offset-2">
           <h1>Contact Us</h1>
-          <h4><strong>For all new business inquiries and requests please fill out the form below.</strong></h4>
+          <h4 id="contact"><strong>For all new business inquiries and requests please fill out the form below.</strong></h4>
         </div>
       </div>
       <div class="row">
@@ -360,6 +399,7 @@
           <h2>Complete the form to request a consultation with one of our experts.<br>
           <br></h2>
           <form action="https://formspree.io/info@trinityerd.com" method="POST">
+            <input type="hidden" name="_next" value="http://trinityerd.jesmakes.com/?thanks=1" />
             <div class="row">
               <div class="col-md-6 col-sm-6">
                 <div class="form-group">
